--- a/logstash.conf
+++ b/logstash.conf
@@ -1,7 +1,7 @@
 input {
         http {
                 host => "0.0.0.0"
-                port => ${PORT}
+                port => "${PORT}"
                 codec => json
         }
 }
